Source/WebKit2/NetworkProcess/capture/NetworkCaptureLogging.h
@@ -34,11 +34,17 @@
 
 #define DEBUG_STR(s)                    (s).ascii().data()
 
+#if RELEASE_LOG_DISABLED
+#define STRING_SPECIFIER                "%s"
+#else
+#define STRING_SPECIFIER                "%{public}s"
+#endif
+
 #if ENABLE(WTF_CAPTURE_INTERNAL_DEBUGGING)
 #define DEBUG_LOG_QUOTE(str)            #str
 #define DEBUG_LOG_EXPAND_AND_QUOTE(str) DEBUG_LOG_QUOTE(str)
-#define DEBUG_LOG(format, ...)          RELEASE_LOG(Network, "#PLT: %p - %{public}s::%{public}s: " format, this, DEBUG_LOG_EXPAND_AND_QUOTE(DEBUG_CLASS), __FUNCTION__, ##__VA_ARGS__)
-#define DEBUG_LOG_ERROR(format, ...)    RELEASE_LOG_ERROR(Network, "#PLT: %p - %{public}s::%{public}s: " format, this, DEBUG_LOG_EXPAND_AND_QUOTE(DEBUG_CLASS), __FUNCTION__, ##__VA_ARGS__)
+#define DEBUG_LOG(format, ...)          RELEASE_LOG(Network, "#PLT: %p - " STRING_SPECIFIER "::" STRING_SPECIFIER ": " format, this, DEBUG_LOG_EXPAND_AND_QUOTE(DEBUG_CLASS), __FUNCTION__, ##__VA_ARGS__)
+#define DEBUG_LOG_ERROR(format, ...)    RELEASE_LOG_ERROR(Network, "#PLT: %p - " STRING_SPECIFIER "::" STRING_SPECIFIER ": " format, this, DEBUG_LOG_EXPAND_AND_QUOTE(DEBUG_CLASS), __FUNCTION__, ##__VA_ARGS__)
 #if ENABLE(WTF_VERBOSE_CAPTURE_INTERNAL_DEBUGGING)
 #define DEBUG_LOG_VERBOSE(format, ...)  DEBUG_LOG(format, ##__VA_ARGS__)
 #else
@@ -46,7 +52,7 @@
 #endif
 #else
 #define DEBUG_LOG(...)                  ((void)0)
-#define DEBUG_LOG_ERROR(...)            ((void)0)
+#define DEBUG_LOG_ERROR(...)            RELEASE_LOG_ERROR(Network, __VA_ARGS__)
 #define DEBUG_LOG_VERBOSE(...)          ((void)0)
 #endif
 
